[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Korosensei.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://assests/mixkit-arcade-retro-game-over-213.wav" type="AudioStream" id=5]
[ext_resource path="res://assests/The Antti JÃ¤dertpolm Quartet - Octobusiness.mp3" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Korosensei" parent="." instance=ExtResource( 3 )]

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPos" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="BulletPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BulletSpawnLocation" type="PathFollow2D" parent="BulletPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.19

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.5

[connection signal="hit" from="Korosensei" to="." method="game_over"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
